[package]
name = "devault"
version = "0.2.0"
authors = ["mitchmindtree <mail@mitchellnordine.com>"]
description = "A more flexible alternative to deriving Default."
keywords = ["default", "init", "fallback", "enum", "const"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/devault.git"
homepage = "https://github.com/mitchmindtree/devault"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
